--- a/tabledemo2.html
+++ b/tabledemo2.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      Table Demo 1
+      Table Demo 2
     </title>
   </head> 
   
@@ -20,20 +20,44 @@
         </ul>
       </nav>
     <center>
-        <h1>Table Demo</h1>
+        <h1>Table Demo - Bootcamp Pet Owners</h1>
         <table border="1"
         <table>
             <tr>
-                <th>Column 1</th>
-                <th>Column 2</th>
+                <th>Bootcamper</th>
+                <th>Pet Name</th>
+                <th>Pet Type</th>
+
             </tr>
             <tr>
-                <td>Data 1a</td>
-                <td>Data 1b</td>
+                <td>Bobby</td>
+                <td>Benny</td>
+                <td>Macaw</td>
+
             </tr>
             <tr>
-                <td>Data 2a</td>
-                <td>Data 2b</td>
+                <td>Jenny</td>
+                <td>Zoey</td>
+                <td>Dog</td>
+
+            </tr>
+            <tr>
+                <td>Brian</td>
+                <td>Puff Daddy</td>
+                <td>Fish</td>
+
+            </tr>
+            <tr>
+                <td>Sharon</td>
+                <td>Ronin</td>
+                <td>Dog</td>
+
+            </tr>
+            <tr>
+                <td>Everybody/td>
+                <td>Marshmallow</td>
+                <td>Panda</td>
+
             </tr>
         </table>
     </center>
