--- a/textdemo.html
+++ b/textdemo.html
@@ -6,6 +6,19 @@
   </head> 
   
   <body>
+    <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="headings.html">Headings Demo</a></li>
+          <li><a href="textdemo.html">Text Demo</a></li>
+          <li><a href="unorderedlist.html">Unordered List Demo</a></li>
+          <li><a href="orderedlist.html">Ordered List Demo</a></li>
+          <li><a href="tabledemo1.html">Table Demo 1</a></li>
+          <li><a href="tabledemo2.html">Table Demo 2</a></li>
+  
+  
+        </ul>
+      </nav>
     <center>
         <h1>This is a demo of different types of text in HTML</h1>
         <h2>Bolded text</h2>
