update with css style

--- a/cssdemo.html
+++ b/cssdemo.html
@@ -24,17 +24,18 @@
         <li><a href="orderedlist.html">Ordered List Demo</a></li>
         <li><a href="tabledemo1.html">Table Demo 1</a></li>
         <li><a href="tabledemo2.html">Table Demo 2</a></li>
-
+        <li><a href="cssdemo.html">CSS Demo</a></li>
 
       </ul>
     </nav>
 
     <h1 class = blue>MAKE ME BLUE</h1>
-    <h1>MAKE ME PURPLE</h1>
+    <h1 id = purple>MAKE ME PURPLE</h1>
     <h1 class = red>MAKE ME RED</h1>
-    <h1>LEFT</h1>
-    <h1>CENTER</h1>
-    <h1>RIGHT</h1>
+    <h1 class = "alignLeft">LEFT</h1>
+    <h1 class = "alignCenter">CENTER</h1>
+    <h1 class = "alignRight">RIGHT</h1>
+    <h1 class = "alignCenter white blackBackground">White Text on Black Background</h1>
 
 
 
